--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -10,10 +10,10 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/profile"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
         android:padding="5dp"
-        android:background="@color/colorSecondary" />
+        android:background="@color/colorSecondary"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/start_camera" />
 
     <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
         android:id="@+id/map"
@@ -22,5 +22,15 @@
         android:layout_weight="1"
         android:scrollbars="vertical"
         class="com.google.android.gms.maps.SupportMapFragment"/>
+    <Button
+        android:id="@id/start_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="@string/camera"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:padding="5dp"
+        android:background="@color/colorPrimary" />
 
-   </RelativeLayout>
+</RelativeLayout>
