Camera now works. File gets saved to device. See description for more..
As in API 24 the file saving of the internal camera has to be changed. Everything now goes over an Fileprovider. for more information see: https://inthecheesefactory.com/blog/how-to-share-access-to-file-with-fileprovider-on-android-nougat/en

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="start_profile" type="id">start_profile</item>
     <item name="start_camera" type="id" />
+    <item name="takeVideo" type="id" />
 </resources>
