--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,7 +4,7 @@
     android:background="@color/white"
     android:orientation="vertical" >
 
-    <Button
+    <!--<Button
         android:id="@+id/start_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,7 +13,28 @@
         android:background="@color/colorPrimary"
         android:gravity="center_horizontal|center_vertical"
         android:padding="5dp"
-        android:text="@string/camera" />
+        android:text="@string/camera" />-->
+
+    <Button
+        android:id="@+id/takeVideo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:gravity="center_horizontal|center_vertical"
+        android:padding="5dp"
+        android:text="@string/Video"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/takePicture" />
+    <Button
+        android:id="@+id/takePicture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:gravity="center_horizontal|center_vertical"
+        android:padding="5dp"
+        android:text="@string/Picture"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/start_profile" />
 
     <Button
         android:id="@id/start_profile"
