--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="io.mapie.mapie.MapsActivity"
+    tools:context="io.mapie.mapie.Activities.MapsActivity"
     android:background="@color/colorPrimary">
 
     <android.support.design.widget.AppBarLayout
