--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center"
     android:background="@color/colorPrimary"
     android:fitsSystemWindows="true"
-    tools:context="io.mapie.mapie.MapsActivity">
+    tools:context="io.mapie.mapie.Activities.MapsActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
