--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -14,7 +14,7 @@
         android:gravity="center_horizontal|center_vertical"
         android:padding="5dp"
         android:text="@string/camera" />-->
-
+<!--
     <Button
         android:id="@+id/takeVideo"
         android:layout_width="wrap_content"
@@ -25,16 +25,7 @@
         android:text="@string/Video"
         android:layout_alignParentBottom="true"
         android:layout_toEndOf="@+id/takePicture" />
-    <Button
-        android:id="@+id/takePicture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:gravity="center_horizontal|center_vertical"
-        android:padding="5dp"
-        android:text="@string/Picture"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/start_profile" />
+
 
     <Button
         android:id="@id/start_profile"
@@ -45,7 +36,27 @@
         android:padding="5dp"
         android:background="@color/colorSecondary"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/start_camera" />
+        android:layout_toEndOf="@+id/start_camera" />-->
+
+    <ImageButton
+        android:id="@id/start_profile"
+        android:src="@drawable/iconsettings"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@color/white"
+        android:contentDescription="@string/settings"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:id="@+id/btnCapturePicture"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@drawable/roundedbutton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="5dp"/>
+
 
     <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
         android:id="@+id/map"
