--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="start_profile" type="id">start_profile</item>
+    <item name="start_settings" type="id"/>
     <item name="start_camera" type="id" />
     <item name="takeVideo" type="id" />
 </resources>
