--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,49 +4,16 @@
     android:background="@color/white"
     android:orientation="vertical" >
 
-    <!--<Button
-        android:id="@+id/start_camera"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:background="@color/colorPrimary"
-        android:gravity="center_horizontal|center_vertical"
-        android:padding="5dp"
-        android:text="@string/camera" />-->
-<!--
     <Button
-        android:id="@+id/takeVideo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/start_setting"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:text="@string/settings"
         android:background="@color/colorPrimary"
-        android:gravity="center_horizontal|center_vertical"
-        android:padding="5dp"
-        android:text="@string/Video"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/takePicture" />
-
-
-    <Button
-        android:id="@id/start_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="@string/profile"
-        android:padding="5dp"
-        android:background="@color/colorSecondary"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/start_camera" />-->
-
-    <ImageButton
-        android:id="@id/start_profile"
-        android:src="@drawable/iconsettings"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@color/white"
-        android:contentDescription="@string/settings"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/btnCapturePicture"
